--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": { "node": "12.18.1" },
   "scripts": {
-    "start": "nodemon server"
+    "start": "node server",
+    "dev":"nodemon server"
   },
   "repository": {
     "type": "git",
