--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": { "node": "12.18.1" },
   "scripts": {
     "start": "node server",
     "dev":"nodemon server"
@@ -23,5 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4"
+  },
+  "engines": { 
+    "node": "12.18.1" 
   }
 }
